--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,11 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "ant-design-vue": "^3.0.0-beta.13",
+    "dayjs": "^1.10.8",
+    "element-plus": "^2.0.5",
     "pinia": "^2.0.11",
+    "vant": "^3.4.5",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
@@ -23,7 +27,9 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1",
+    "sass": "^1.49.9",
     "typescript": "~4.5.5",
+    "unplugin-vue-components": "^0.17.21",
     "vite": "^2.8.4",
     "vue-tsc": "^0.31.4"
   }
