--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,8 @@
     "typescript": "~4.5.5",
     "unplugin-vue-components": "^0.17.21",
     "vite": "^2.8.4",
+    "vite-plugin-optimize-persist": "^0.1.2",
+    "vite-plugin-package-config": "^0.1.1",
     "vue-tsc": "^0.31.4"
   }
 }
