--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/node": "^17.0.21",
+    "axios": "^0.26.1",
     "element-plus": "^2.0.5",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13"
